--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,167 +1,93 @@
 services:
-  # APP
-  # lucy-app:
-  #   build:
-  #     context: ./app
-  #     dockerfile: ../lucy-app.dockerfile
-  #   image: lucy-app:latest
-  #   container_name: lucy-app
-  #   restart: always
-  #   ports:
-  #     - "${APP_PORT}:${APP_PORT}"
-  #   volumes:
-  #     - ./app:/go/src/app
-  #   depends_on:
-  #     - lucy-mongo-init
-  #     - lucy-redis
-  #   networks:
-  #     - lucy
-  #   platform: linux/amd64
-  #   logging:
-  #     driver: "json-file"
-  #     options:
-  #       max-size: "200k"
-  #       max-file: "10"
-
-  # lucy-nginx:
-  #   image: nginx:mainline-alpine
-  #   container_name: lucy-nginx
-  #   restart: always
-  #   ports:
-  #     - "${APP_NGINX}:${APP_NGINX}"
-  #   volumes:
-  #     - ./control-panel:/var/www/html
-  #     - ./conf/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-  #   logging:
-  #     driver: "json-file"
-  #     options:
-  #       max-size: "200k"
-  #       max-file: "10"
-
-  # lucy-firebase:
-  #   image: golang:alpine
-  #   container_name: lucy-firebase
-  #   restart: always
-  #   # ports:
-  #   #   - "${FIREBASE_PORT}:${FIREBASE_PORT}"
-  #   volumes:
-  #     - ./firebase:/go/src/firebase
-  #     - ./domain:/go/src/domain
-  #   working_dir: /go/src/firebase
-  #   command: go run --tags=jsoniter main.go
-  #   depends_on:
-  #     - lucy-mongo-init
-  #     - lucy-redis
-  #     - lucy-api
-  #   networks:
-  #     - lucy
-
-  # MONGO
-  lucy-mongo1:
+  mongo1:
     image: mongo:latest
-    container_name: lucy-mongo1
+    container_name: mongo1
     restart: always
     command: >
       mongod --replSet ${MONGO_REPLICA_SET}
-        --keyFile /etc/mongo-keyfile
+        --keyFile /etc/mongo-keyfile/mongo-keyfile
         --auth
     ports:
-      - "27017"
+      - "27017:27017"
     environment:
-      - "MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}"
-      - "MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}"
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
       - ./volumes/rs1:/data/db
-      - ./conf/mongo/mongo-keyfile:/etc/mongo-keyfile
+      - ./conf/mongo/mongo-keyfile:/etc/mongo-keyfile/mongo-keyfile:ro
     networks:
       - lucy
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "200k"
-        max-file: "10"
     healthcheck:
       test: ["CMD", "mongosh", "--username", "${MONGO_INITDB_ROOT_USERNAME}", "--password", "${MONGO_INITDB_ROOT_PASSWORD}", "--eval", "db.adminCommand('ping')"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  lucy-mongo2:
+  mongo2:
     image: mongo:latest
-    container_name: lucy-mongo2
+    container_name: mongo2
     restart: always
     command: >
       mongod --replSet ${MONGO_REPLICA_SET}
-        --keyFile /etc/mongo-keyfile
+        --keyFile /etc/mongo-keyfile/mongo-keyfile
         --auth
     ports:
-      - "27017"
+      - "27018:27017"
     environment:
-      - "MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}"
-      - "MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}"
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
       - ./volumes/rs2:/data/db
-      - ./conf/mongo/mongo-keyfile:/etc/mongo-keyfile
+      - ./conf/mongo/mongo-keyfile:/etc/mongo-keyfile/mongo-keyfile:ro
     networks:
       - lucy
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "200k"
-        max-file: "10"
     healthcheck:
       test: ["CMD", "mongosh", "--username", "${MONGO_INITDB_ROOT_USERNAME}", "--password", "${MONGO_INITDB_ROOT_PASSWORD}", "--eval", "db.adminCommand('ping')"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  lucy-mongo3:
+  mongo3:
     image: mongo:latest
-    container_name: lucy-mongo3
+    container_name: mongo3
     restart: always
     command: >
       mongod --replSet ${MONGO_REPLICA_SET}
-        --keyFile /etc/mongo-keyfile
+        --keyFile /etc/mongo-keyfile/mongo-keyfile
         --auth
     ports:
-      - "27017"
+      - "27019:27017"
     environment:
-      - "MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}"
-      - "MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}"
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
     volumes:
       - ./volumes/rs3:/data/db
-      - ./conf/mongo/mongo-keyfile:/etc/mongo-keyfile
+      - ./conf/mongo/mongo-keyfile:/etc/mongo-keyfile/mongo-keyfile:ro
     networks:
       - lucy
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "200k"
-        max-file: "10"
     healthcheck:
       test: ["CMD", "mongosh", "--username", "${MONGO_INITDB_ROOT_USERNAME}", "--password", "${MONGO_INITDB_ROOT_PASSWORD}", "--eval", "db.adminCommand('ping')"]
       interval: 10s
       timeout: 5s
       retries: 5
 
-  lucy-mongo-init:
+  mongo-init:
     image: mongo:latest
-    container_name: lucy-mongo-init
+    container_name: mongo-init
     restart: "no"
     volumes:
-      - ./conf/mongo:/tmp
       - ./conf/mongo/setup.sh:/tmp/setup.sh
     environment:
-      - "MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}"
-      - "MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}"
-      - "MONGO_REPLICA_SET=${MONGO_REPLICA_SET}"
-    command: [ "sh", "/tmp/setup.sh" ]
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      - MONGO_REPLICA_SET=${MONGO_REPLICA_SET}
+    entrypoint: [ "sh", "/tmp/setup.sh" ]
     depends_on:
-      lucy-mongo1:
+      mongo1:
         condition: service_healthy
-      lucy-mongo2:
+      mongo2:
         condition: service_healthy
-      lucy-mongo3:
+      mongo3:
         condition: service_healthy
     networks:
       - lucy
@@ -170,23 +96,6 @@ services:
       options:
         max-size: "200k"
         max-file: "10"
-
-  # REDIS
-  # lucy-redis:
-  #   image: redis:7-alpine
-  #   container_name: lucy-redis
-  #   restart: always
-  #   ports:
-  #     - 6379
-  #   volumes:
-  #     - ./volumes/redis:/data
-  #   networks:
-  #     - lucy
-  #   logging:
-  #     driver: "json-file"
-  #     options:
-  #       max-size: "200k"
-  #       max-file: "10"
 
 networks:
   lucy:
